<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.add_edit_actvity.AddEditActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_cd"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/close"
            android:src="@drawable/close_ic"
            app:tint="@color/black" />
    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_cd"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/image"
        android:src="@drawable/placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:shapeAppearanceOverlay="@style/RoundedCorner" />

    <TextView
        android:id="@+id/take_image"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_corner_bg"
        android:gravity="center"
        android:text="@string/take_image"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/iv_cd"
        app:layout_constraintStart_toStartOf="@id/iv_cd"
        app:layout_constraintTop_toBottomOf="@id/iv_cd" />

    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/take_image">

        <EditText
            android:id="@+id/et_album_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/round_corner_bg_outline"
            android:hint="@string/album_name"
            android:inputType="text"
            android:paddingStart="10dp"
            android:textColorHint="@color/blueLight" />

        <EditText
            android:id="@+id/et_artist_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_corner_bg_outline"
            android:hint="@string/artist_name"
            android:inputType="text"
            android:paddingStart="10dp"
            android:textColorHint="@color/blueLight" />

        <TextView
            android:id="@+id/et_date"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center|start"
            android:background="@drawable/round_corner_bg_outline"
            android:hint="@string/date"
            android:paddingStart="10dp"
            android:textColorHint="@color/blueLight" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/origin"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/input_layout"
        app:layout_constraintTop_toBottomOf="@id/input_layout" />

    <RadioGroup
        android:id="@+id/originRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="@id/input_layout"
        app:layout_constraintTop_toBottomOf="@id/input_layout"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/domesticRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/domestic"
            android:textColor="@color/black"
            android:checked="true" />

        <RadioButton
            android:id="@+id/foreignRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"
            android:text="@string/foreign" />
    </RadioGroup>

    <TextView
        android:id="@+id/save"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_corner_bg"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/iv_cd"
        app:layout_constraintStart_toStartOf="@id/iv_cd"
        app:layout_constraintTop_toBottomOf="@id/originRadioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>