<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
<com.google.android.material.card.MaterialCardView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="@color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_margin="10dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:strokeWidth="0dp"
    app:cardElevation="5dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/tv_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/iv_cd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_album_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/artist_name"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_artist_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/artist_name"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/artist_name"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_label_origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/artist_name"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_cd"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedCorner" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/iv_cd"
            app:layout_constraintStart_toStartOf="@id/iv_cd"
            app:layout_constraintTop_toBottomOf="@id/iv_cd">

            <ImageView
                android:id="@+id/iv_edit"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/edit"
                android:src="@drawable/edit_ic"
                app:tint="@color/blue" />

            <ImageView
                android:id="@+id/iv_delete"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/delete"
                android:src="@drawable/delete_ic"
                app:tint="@color/red" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>